--- a/web/themes/custom/myusf/sass/src/partials/_components.scss
+++ b/web/themes/custom/myusf/sass/src/partials/_components.scss
@@ -1576,7 +1576,8 @@ button.close {
 		color: $yellow;
 
 		 @include media-breakpoint-down(phone) {
-		 	right: 15px;
+		 	right: 30px;
+		 	padding: .5rem .75rem;
 		 }
 	}
 	&.fade.show.alert-success,
